// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine draws corner sprites correctly (according to mirror isles) 1`] = `
Array [
  Array [
    Array [
      "RemoveLandRUD",
      "Background",
    ],
    Array [
      "Hole",
      "CrateInHole",
    ],
  ],
]
`;

exports[`engine draws corner sprites correctly (according to skipping stones) 1`] = `
Array [
  Array [
    Array [
      "RemoveLandRUD",
      "Sand",
    ],
    Array [
      "Background",
    ],
    Array [
      "Background",
    ],
  ],
]
`;

exports[`engine draws corner sprites correctly (according to skipping stones) 2`] = `
Array [
  Array [
    Array [
      "RemoveLandRUD",
      "Sand",
    ],
    Array [
      "Background",
    ],
    Array [
      "Background",
    ],
  ],
]
`;

exports[`engine evaluates a simple game 1`] = `
Array [
  Array [
    Array [
      "one",
    ],
    Array [
      "Player",
    ],
  ],
]
`;
